# data-science-from-scratch

./: CMakeLists.txt
.github/workflows/: tests.yml
examples/: example_linear_algebra.cpp  statistics.cpp
include/ds/: gradient.hpp  inference.hpp  linear_algebra.hpp  probability.hpp  statistics.hpp
src/: gradient.cpp  inference.cpp  linear_algebra.cpp  probability.cpp  statistics.cpp
tests/: test_linear_algebra.cpp  test_statistics.cpp
